# net-latency-injector

./: CMakeLists.txt  README.md
include/: Gui.hpp  Utils.hpp  gui.hpp  utils.hpp
include/lagger/: gui.hpp  utils.hpp
src/: Gui.cpp  Utils.cpp  gui.cpp  main.cpp  utils.cpp
